first commit (home page + register and login for users and admin)

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -75,7 +75,7 @@
             <h1>Content de vous revoir</h1>
             <p>Déja inscrit?</p>
             <button class="ghost" id="signUp">
-              <a href="{{ route('login') }}">Se connecter</a>
+              <a href="login">Se connecter</a>
             </button>
           </div>
         </div>
